<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="in.digitechlab.chestprescription.ComplaintActivity"
    android:background="#e0ffb1">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapBrand="success"
            app:bootstrapHeading="h4"
            app:roundedCorners="false"
            android:text="@string/tt1"
            style="@style/CodeFont2"
            />

    <LinearLayout
        android:layout_margin="4dp"
        android:id="@+id/tappx_banner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    </LinearLayout>


    <CheckBox
            android:id="@+id/cc1"
            android:text="@string/cc1"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc2"
            android:text="@string/cc2"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc4"
            android:text="@string/cc4"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc5"
            android:text="@string/cc5"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc11"
            android:text="@string/cc11"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc20"
            android:text="@string/cc20"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc9"
            android:text="@string/cc9"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc15"
            android:text="@string/cc15"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc16"
            android:text="@string/cc16"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc10"
            android:text="@string/cc10"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>


        <CheckBox
            android:id="@+id/cc17"
            android:text="@string/cc17"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc18"
            android:text="@string/cc18"
            style="@style/CodeFont"
            android:onClick="onComplaintCheckboxClicked">
        </CheckBox>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/submitCc"
            android:onClick="SubmitCc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            app:bootstrapBrand="primary"
            android:layout_margin="16dp"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"
            />

    </LinearLayout>
</ScrollView>
