<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="#e0ffb1"
    tools:context="in.digitechlab.chestprescription.RespiratoryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapBrand="success"
            app:bootstrapHeading="h4"
            app:roundedCorners="false"
            android:text="@string/tt9"
            style="@style/CodeFont2"
            />

        <LinearLayout
            android:layout_margin="4dp"
            android:id="@+id/tappx_banner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

        <CheckBox
            android:id="@+id/cc3"
            android:text="@string/cc3"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc22"
            android:text="@string/cc22"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc8"
            android:text="@string/cc8"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc12"
            android:text="@string/cc12"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc13"
            android:text="@string/cc13"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc14"
            android:text="@string/cc14"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc19"
            android:text="@string/cc19"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc21"
            android:text="@string/cc21"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>

        <CheckBox
            android:id="@+id/cc23"
            android:text="@string/cc23"
            android:onClick="onRespCheckboxClicked"
            style="@style/CodeFont">
        </CheckBox>


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/submitRc"
            android:onClick="SubmitRc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            app:bootstrapBrand="primary"
            android:layout_margin="16dp"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"
            />

    </LinearLayout>
</ScrollView>