<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="#e0ffb1"
    tools:context="in.digitechlab.chestprescription.ChestPainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bootstrapBrand="success"
            app:bootstrapHeading="h4"
            app:roundedCorners="false"
            android:text="@string/tt10"
            style="@style/CodeFont2"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton
            android:id="@+id/cc6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cc6"/>

        <RadioButton
            android:id="@+id/cc7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cc7"/>

        <RadioButton
            android:id="@+id/cc24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:checked="true"
            android:text="@string/cc24"/>

        </RadioGroup>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            android:layout_marginBottom="8dp"
            ads:adUnitId="@string/banner_ad_id">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:id="@+id/CPLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapBrand="success"
                app:bootstrapHeading="h4"
                app:roundedCorners="false"
                android:text="@string/tt2"
                style="@style/CodeFont2"
                />


        <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/cp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cp1"/>

        <RadioButton
            android:id="@+id/cp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cp2"/>

        <RadioButton
            android:id="@+id/cp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cp3"/>

        <RadioButton
            android:id="@+id/cp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cp4"/>

        <RadioButton
            android:id="@+id/cp5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CodeFont1"
            android:onClick="onRadioCPClicked"
            android:text="@string/cp5"/>

        <RadioButton
            android:id="@+id/cp6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioCPClicked"
            style="@style/CodeFont1"
            android:text="@string/cp6"/>


        </RadioGroup>

    </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/submitCp"
            android:onClick="SubmitCp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            app:bootstrapBrand="primary"
            android:layout_margin="16dp"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:showOutline="false"
            app:roundedCorners="true"
            />

    </LinearLayout>
    </ScrollView>