<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="#e0ffb1"
    tools:context="in.digitechlab.chestprescription.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <!--Put form controls here-->


            <LinearLayout
                android:layout_margin="4dp"
                android:id="@+id/tappx_banner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>


            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapBrand="success"
                app:bootstrapHeading="h4"
                app:roundedCorners="false"
                android:text="@string/tt8"
                style="@style/CodeFont2"
                />


            <RadioGroup
                android:id="@+id/RadioPp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/age1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:text="@string/p11"/>

                <RadioButton
                    android:id="@+id/age2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:checked="true"
                    android:text="@string/p12"/>

            </RadioGroup>



            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapBrand="success"
                app:bootstrapHeading="h4"
                app:roundedCorners="false"
                android:text="@string/p2"
                style="@style/CodeFont2"
                />


            <RadioGroup
                android:id="@+id/RadioPp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/occ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:checked="true"
                    android:text="@string/p10"/>

                <RadioButton
                    android:id="@+id/occ2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:text="@string/p15"/>

                <RadioButton
                    android:id="@+id/occ3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:text="@string/p16"/>

            </RadioGroup>


            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapBrand="success"
                app:bootstrapHeading="h4"
                app:roundedCorners="false"
                android:text="@string/p7"
                style="@style/CodeFont2"
                />


            <RadioGroup
                android:id="@+id/RadioPp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/smk1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:checked="true"
                    android:text="@string/p51"/>

                <RadioButton
                    android:id="@+id/smk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:text="@string/p52"/>

            </RadioGroup>

            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bootstrapBrand="success"
                app:bootstrapHeading="h4"
                app:roundedCorners="false"
                android:text="@string/p9"
                style="@style/CodeFont2"
                />


            <RadioGroup
                android:id="@+id/RadioPp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/pls1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:text="@string/p91"/>

                <RadioButton
                    android:id="@+id/pls2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CodeFont1"
                    android:text="@string/p92"/>

                <RadioButton
                    android:id="@+id/pls3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    style="@style/CodeFont1"
                    android:text="@string/p93"/>

            </RadioGroup>


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/submitPp"
                android:onClick="SubmitPp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SUBMIT"
                app:bootstrapBrand="primary"
                android:layout_margin="16dp"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_id">
            </com.google.android.gms.ads.AdView>

        </LinearLayout>
    </ScrollView>